# Magick

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
Magick/: CMakeLists.txt  main.cpp
Magick/shaders/: base.fs  base.vs  hitbox.fs  hitbox.vs
Magick/src/: Buffer.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Hitbox.cpp  Hitbox.h  Random.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h  include.h
